fix: added default style removal on ios [FRON-2339]

--- a/apps/measurement-charts/src/app/src/graph/source-selector/source-selector.element.scss
+++ b/apps/measurement-charts/src/app/src/graph/source-selector/source-selector.element.scss
@@ -20,17 +20,29 @@
     margin-left: 20px;
     padding: 0 10px;
 
+    .select-icon {
+      height: 25px;
+      position: absolute;
+      right: 20px;
+      width: 25px;
+    }
+
     [dir='rtl'] & {
       margin-left: 0px;
       margin-right: 20px;
     }
 
     select {
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      appearance: none;
       font-size: 16px;
+      background-color: transparent;
       border: 0;
       width: 100%;
       outline: none;
       color: var(--text);
+      z-index: 1;
     }
   }
 }
